[package]
name = "ccelerate_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.96"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
ccelerate_shared = { path = "../ccelerate_shared" }
base64 = "0.22.1"
