[package]
name = "ccelerate_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
ccelerate_shared = { path = "../ccelerate_shared" }
base64 = "0.22.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
parking_lot = "0.12.3"
rusqlite_migration = "1.3.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
scopeguard = "1.2.0"
include_dir = "0.7.4"
tempfile = "3.18.0"
rayon = "1.10.0"
uuid = { version = "1.15.1", features = ["v4"] }
clap = { version = "4.5.31", features = ["derive"] }
log = { version = "0.4.26", features = ["kv"] }
regex = "1.11.1"
once_cell = "1.20.3"
twox-hash = "2.1.0"
bstr = { version = "1.11.3", features = ["serde"] }
toml = "0.8.20"
chrono = "0.4.40"
futures = "0.3.31"
async-recursion = "1.1.1"
glob = "0.3.2"
os_str_bytes = "7.1.0"
smallvec = "1.14.0"
